添加创建房间api
