# app/routes/message.ts
@@ -1,5 +1,5 @@
 import * as Router from 'koa-router';
-import { retrieveLastMessages, retrieveMessages, sendMessage, sendMessageTo } from '../controllers/message.ctrl';
+import { retrieveLastMessages, retrieveMessages, sendMessage, sendMessageTo, createSession } from '../controllers/message.ctrl';
 
 const router = new Router();
 
@@ -7,5 +7,6 @@ router.get('/last', retrieveLastMessages);
 router.get('/:sessionId', retrieveMessages);
 router.post('/:sessionId', sendMessage);
 router.post('/to/:tid', sendMessageTo);
+router.post('/session/:tid', createSession);
 
 export default router.routes();
